--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # site settings
-title: welcome to xyzuanscape <3
+title: XYZ
 subtitle:
 email: xyzuan@qmail.id
 description: Android Enthusiast, childish boys who loved android n Linux stuff
