--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # site settings
-title: XYZ
+title: XYZUAN
 subtitle:
 email: xyzuan@qmail.id
 description: Android Enthusiast, childish boys who loved android n Linux stuff
